[package]
name = "talc"
version = "0.1.0"
rust-version = "1.64.0"
edition = "2021"
readme = "README.md"
authors = ["Shaun Beautement", "Max Daubmann"]
description = "A fast and flexible allocator for no_std and WebAssembly"
repository = "https://github.com/COLORADIO-Project/talc"
keywords = ["allocator", "no_std", "memory", "wasm"]
categories = ["memory-management", "no-std", "embedded", "wasm"]
license = "MIT"

[features]
counters = []
nightly = []
disable-grow-in-place = []
disable-realloc-in-place = []
1-byte-pages = []
# internal, requires std, turns on thorough error checking
# of allocator invariants with large performance cost
error-scanning-std = ["allocator-api2/std"]

[dependencies]
allocator-api2 = { version = "0.4", default-features = false, features = ["alloc"] }
lock_api = { version = "0.4", default-features = false }

[dev-dependencies]
talc = { path = ".", features = ["error-scanning-std"] }
spinning_top = "0.3"
allocator-api2 = { version = "0.4", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
